<resources>
    <string name="app_name">YourAppName</string>

    <!-- Login Activity Strings -->
    <string name="username_label">User Name</string>
    <string name="username_hint">Enter Name</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_question">Don\'t have account</string>
    <string name="signup_button">Sign Up</string>
    <string name="right">✔</string>
    <string name="scheduled_25th_august_2025">Scheduled: 25th August 2025</string>
    <string name="dhpp_combo_vaccine">DHPP Combo Vaccine</string>
    <string name="scheduled_25th_august_20255">Scheduled: 25th August 2025</string>
    <string name="rabies_vaccine_02">Rabies Vaccine 02</string>
    <string name="scheduled_25th_august_20251">Scheduled: 25th August 2025</string>
    <string name="leptospirosis_vaccine">Leptospirosis Vaccine</string>
    <string name="scheduled_25th_august_20252">Scheduled: 25th August 2025</string>
    <string name="rabies_vaccine_03">Rabies Vaccine 03</string>
    <string name="scheduled_25th_august_20256">Scheduled: 25th August 2025</string>
    <string name="lyme_disease_vaccine">Lyme Disease Vaccine</string>
    <string name="scheduled_25th_august_20258">Scheduled: 25th August 2025</string>
    <string name="leptospirosis_vaccines">Leptospirosis Vaccine</string>
    <string name="scheduled_25th_august_20259">Scheduled: 25th August 2025</string>
    <string name="scheduled_25th_august_20250">Scheduled: 25th August 2025</string>
    <string name="rabies_vaccine_05">Rabies Vaccine 05</string>
    <string name="scheduled_25th_august_202511">Scheduled: 25th August 2025</string>
    <string name="leptospirosis_vacciness">Leptospirosis Vaccine</string>
    <string name="scheduled_25th_august_202522">Scheduled: 25th August 2025</string>
    <string name="rabies_vaccine_04">Rabies Vaccine 04</string>
    <string name="rabies_vaccine_01">Rabies Vaccine 01</string>
    <string name="upcoming_vaccines">Upcoming Vaccines</string>
    <string name="add_new_vaccine">Add New Vaccine</string>
    <string name="vaccination_schedule">Vaccination Schedule</string>
    <string name="app_logo">App Logo</string>
    <string name="oppen_app">Oppen App</string>
    <string name="app_logo1">App Logo</string>
    <string name="vaccination_schedule1">Vaccination Schedule</string>
    <string name="vaccine_name1">Vaccine Name:</string>
    <string name="enter_name_of_the_vaccine">Enter name of the vaccine</string>
    <string name="vaccine_date">Vaccine Date:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="hospital_location">Hospital Location</string>
    <string name="enter_location_name">Enter location_name</string>
    <string name="map_icon">Map Icon</string>
    <string name="submit">Submit</string>
    <string name="paw_care">Paw Care</string>
    <string name="product_details">Product Details</string>
    <string name="auto_complete">Auto complete</string>
    <string name="delivary_fee">Delivary Fee :</string>
    <string name="total_fee">Total Fee :</string>
    <string name="auto_complete1">Auto complete</string>
    <string name="auto_complete2">Auto complete</string>
    <string name="product_price">Product Price :</string>
    <string name="quantity">Quantity :</string>
    <string name="auto_complete3">Auto complete</string>
    <string name="auto_complete4">Auto complete</string>
    <string name="product_name">Product Name :</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="card_payment">Card Payment</string>
    <string name="lkr">LKR</string>
    <string name="amount">Amount</string>
    <string name="pay_from">Pay From</string>
    <string name="user_card_details">User card details</string>
    <string name="recever_card_details">Recever card details</string>
    <string name="pay_to">Pay To</string>
    <string name="remarks_max_16_characters">Remarks - Max 16 characters</string>
    <string name="pay_now">Pay Now</string>
    <string name="completed_vaccines">Completed Vaccines</string>
    <string name="app_logo2">App Logo</string>
    <string name="vaccination_schedule2">Vaccination Schedule</string>
    <string name="right1">✔</string>
    <string name="dhpp_vaccine_001">DHPP Vaccine - 001</string>
    <string name="scheduled_25th_january_2025">Scheduled: 25th January 2025</string>
    <string name="dhpp_combo_vaccine_01">DHPP Combo Vaccine - 01</string>
    <string name="scheduled_5th_april_2025">Scheduled: 5th April 2025</string>
    <string name="right2">✔</string>
    <string name="dhpp_combo_02">DHPP Combo - 02</string>
    <string name="scheduled_25th_april_2025">Scheduled: 25th April 2025</string>
    <string name="dhpp_combo_vaccine3">DHPP Combo Vaccine</string>
    <string name="scheduled_3rd_may_2025">Scheduled: 3rd May 2025</string>
    <string name="right3">✔</string>
    <string name="scheduled_25th_august2025">Scheduled: 25th August 2025</string>
    <string name="rabies_vaccine">Rabies Vaccine</string>
    <string name="scheduled_25thaugust_2025">Scheduled: 25th August 2025</string>
    <string name="dhpp_combo_vaccine5">DHPP Combo Vaccine</string>
    <string name="splash_plash">Splash Plash</string>
    <string name="rs_2_100_00">Rs. 2,100.00</string>
    <string name="buy_now">Buy now</string>
    <string name="bowls_with_penuts">Bowls with Penuts</string>
    <string name="rs_2_800_00">Rs.2,800.00</string>
    <string name="buy_now1">Buy now</string>
    <string name="protine_bowle_food">Protine Bowle Food</string>
    <string name="rs_1_500_00">Rs.1,500.00</string>
    <string name="buy_now2">Buy now</string>
    <string name="frash_boils">Frash Boils</string>
    <string name="rs_2_800_000">Rs.2,800.00</string>
    <string name="buy_now3">Buy now</string>
    <string name="splash_ruard">SPlash Ruard</string>
    <string name="rs_1_800_00">Rs.1,800.00</string>
    <string name="buy_now4">Buy now</string>
    <string name="plash_guard">Plash Guard</string>
    <string name="rs_1_500_000">Rs.1,500.00</string>
    <string name="buy_now5">Buy now</string>
    <string name="welcome">Welcome...</string>
    <string name="reminder_on">Reminder On</string>
    <string name="due_10_th_september_2025">Due : 10 th September, 2025</string>
    <string name="rabies_vaccines">+ Rabies Vaccine</string>
    <string name="next_vaccination_plane">Next Vaccination Plane</string>
    <string name="back">Back....</string>
    <string name="pet_shagi">Pet : Shagi.</string>
    <string name="age_4">Age : 4.</string>
    <string name="today_tip">Today Tip</string>
    <string name="keep_your_pet_hydrate">Keep your pet hydrate..</string>
    <string name="mobile_payment">Mobile Payment</string>
    <string name="lkr1">LKR</string>
    <string name="pay_from1">Pay From</string>
    <string name="user_card_details1">User card details</string>
    <string name="amount1">Amount</string>
    <string name="remarks_max_16_characters1">Remarks - Max 16 characters</string>
    <string name="pay_now1">Pay Now</string>
    <string name="track_your_pet_s_health">Track Your Pet\'s Health</string>
    <string name="easily_manage_vaccination_schedules_and_medical_records">Easily manage vaccination schedules and medical records.</string>
    <string name="skip1">Skip</string>
    <string name="personalized_nutrition_tips">Personalized Nutrition Tips</string>
    <string name="find_the_best_food_plans_based_on_your_pet_s_breed_and_age">Find the best food plans based on your pet’s breed and age.</string>
    <string name="skip2">Skip</string>
    <string name="everything_in_one_place">Everything in One Place</string>
    <string name="profiles_reminders_health_logs_all_in_your_pocket">Profiles, reminders, health logs — all in your pocket.</string>
    <string name="create_an_account">Create an account</string>
    <string name="skip3">Skip</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="payment_method2">Payment Method</string>
    <string name="card_payment1">Card Payment</string>
    <string name="mobile_payment1">Mobile Payment</string>
    <string name="pet_weight">pet_weight</string>
    <string name="pet_age">pet_age</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="species">Species</string>
    <string name="pet_name">Pet_name</string>
    <string name="pet_namea">Pet Name</string>
    <string name="pet_details">Pet Details</string>
    <string name="pet_details1">Pet Details</string>
    <string name="owner_details">Owner Details</string>
    <string name="nethu_shadow">Nethu (Shadow)</string>
    <string name="pet_info">Pet Info :</string>
    <string name="personal_info">Personal Info :</string>
    <string name="nethu_shadow1">Nethu (Shadow)</string>
    <string name="owner_details1">Owner Details</string>
    <string name="pet_details2">Pet Details</string>
    <string name="owner_details2">Owner Details</string>
    <string name="pet_owner_name">Pet Owner Name</string>
    <string name="pet_owner_name1">Pet Owner Name</string>
    <string name="mobile_number1">Mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="email1">Email</string>
    <string name="province">Province</string>
    <string name="province1">Province</string>
    <string name="address">Address</string>
    <string name="address1">Address</string>
    <string name="hello">Hello...</string>
    <string name="register_to_start">Register to start...</string>
    <string name="user_name">User Name</string>
    <string name="enter_name">enter_name</string>
    <string name="email3">Email</string>
    <string name="email_address">email_address</string>
    <string name="password">Password</string>
    <string name="enter_password">enter_password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signin">Signin</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="transaction_id_trx123456">Transaction ID: TRX123456</string>
    <string name="amount_lkr">Amount: LKR _ _ _ _ . _ _</string>
    <string name="back_to_home">Back to Home</string>
</resources>