<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88CEF6"
    tools:context=".profile_activity">

    <LinearLayout
        android:id="@+id/profile_images"
        android:layout_width="match_parent"
        android:layout_height="281dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId"
        tools:layout_editor_absoluteX="-52dp">

        <TextView
            android:id="@+id/textView34"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:text="@string/personal_info"
            android:textColor="#0E1D80"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/imgOwner"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pp1" />

        <ImageView
            android:id="@+id/imgPet"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="-20dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bb2" />

        <TextView
            android:id="@+id/tvOwnerPetName"
            android:layout_width="79dp"
            android:layout_height="57dp"
            android:layout_marginTop="8dp"
            android:text="@string/nethu_shadow1"
            android:textColor="#1F1B1B"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/owner_details"
        android:layout_width="392dp"
        android:layout_height="503dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_images"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="63dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_prof"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:backgroundTint="#164476"
                android:text="@string/owner_details1" />

            <Button
                android:id="@+id/btn_pet"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:backgroundTint="#173D6B"
                android:text="@string/pet_details2" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/owner_details2"
            android:textColor="#1B1A1A"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Pet Owner Name -->

        <TextView
            android:id="@+id/textView29"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:text="@string/pet_owner_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etOwnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/pet_owner_name1"
            android:minHeight="48dp"
            android:padding="10dp" />

        <!-- Mobile Number -->
        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/mobile_number1"
            android:inputType="phone"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Email -->
        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/email1"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Province -->

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/province"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/province1"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Address -->
        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="379dp"
            android:layout_height="28dp"
            android:hint="@string/address1"
            android:padding="12dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/nav_item_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <!-- Bottom Navigation View -->

</androidx.constraintlayout.widget.ConstraintLayout>


