<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgLogo2"
        android:layout_width="122dp"
        android:layout_height="107dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_logo1"
        android:src="@drawable/newlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/vaccination_schedule1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Bottom Navigation View -->

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="634dp"
        android:background="#E6C0F6"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <!-- Vaccine Name -->

        <TextView
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vaccine_name1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="332dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/enter_name_of_the_vaccine"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />


        <!-- Vaccine Date with Calendar Icon -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vaccine_date"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/dd_mm_yyyy"
                android:inputType="none"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/ivCalendar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/calendar_icon"
                android:padding="8dp"
                android:src="@drawable/baseline_calendar_month_24"
                tools:srcCompat="@drawable/baseline_calendar_month_24" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginTop="8dp"
            android:text="@string/hospital_location"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="56dp"
                android:ems="10"
                android:hint="@string/enter_location_name"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/ivMap"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/map_icon"
                android:padding="8dp"
                android:src="@drawable/outline_add_location_24"
                tools:srcCompat="@android:drawable/ic_dialog_map" />
        </RelativeLayout>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="56dp"
            android:text="Reminder"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/submit"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/nav_item_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />



</androidx.constraintlayout.widget.ConstraintLayout>