<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88CEF6"
    tools:context=".petprofile_activity">

    <!-- Profile Images -->

    <TextView
        android:id="@+id/textView35"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pet_info"
        android:textColor="#0E1D80"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/profile_images"
        android:layout_width="408dp"
        android:layout_height="254dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId"
        tools:layout_editor_absoluteX="3dp">

        <ImageView
            android:id="@+id/imgOwner"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bb2" />

        <ImageView
            android:id="@+id/imgPet"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="-20dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pp1" />

        <TextView
            android:id="@+id/tvOwnerPetName"
            android:layout_width="91dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:text="@string/nethu_shadow"
            android:textColor="#1B1919"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/owner_details"
        android:layout_width="379dp"
        android:layout_height="483dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:clipToPadding="false"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_images"
        app:layout_constraintVertical_bias="0.884">

        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="63dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_prof"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:backgroundTint="#164476"
                android:text="@string/owner_details" />

            <Button
                android:id="@+id/btn_pet"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:backgroundTint="#173D6B"
                android:text="@string/pet_details1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/pet_details"
            android:textColor="#1A1919"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Pet Name -->
        <TextView
            android:id="@+id/textView29"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:text="@string/pet_namea"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etOwnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/pet_name"
            android:minHeight="48dp"
            android:padding="10dp" />

        <!-- Species -->
        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/species"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbDog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/dog"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rbCat"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/cat"
                android:textSize="14sp" />
        </RadioGroup>

        <!-- Age -->
        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/pet_age"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Weight -->
        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weight"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:hint="@string/pet_weight"
            android:padding="10dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/nav_item_color"
        app:itemTextColor="@color/nav_item_color"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
