<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFD8F8"
    tools:context=".profile_activity">

    <LinearLayout
        android:id="@+id/profile_images"
        android:layout_width="389dp"
        android:layout_height="305dp"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownId">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="287dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/onboard1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="372dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:text="@string/track_your_pet_s_health"
        android:textColor="#0C112F"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.563"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="354dp"
        android:layout_height="147dp"
        android:layout_gravity="center"
        android:text="@string/easily_manage_vaccination_schedules_and_medical_records"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <Button
        android:id="@+id/buttonsk3"
        android:layout_width="183dp"
        android:layout_height="57dp"
        android:backgroundTint="#3A9BCE"
        android:text="@string/skip1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

</androidx.constraintlayout.widget.ConstraintLayout>


